--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "node": "^14"
   },
   "dependencies": {
+    "cheerio": "^1.0.0-rc.12",
     "chrome-aws-lambda": "^6",
     "express": "^4.18.1",
     "puppeteer-core": "^6"
