--- a/package.json
+++ b/package.json
@@ -4,21 +4,17 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "engines": {
-    "node": "^14"
-  },
   "dependencies": {
     "cheerio": "^1.0.0-rc.12",
-    "chrome-aws-lambda": "^6",
+    "dotenv": "^16.1.4",
     "express": "^4.18.1",
-    "puppeteer-core": "^6"
-  },
-  "devDependencies": {
-    "puppeteer": "^16.2.0"
+    "nodemon": "^2.0.22",
+    "puppeteer": "^19.7.2"
   }
 }
